# oisg

./: Cargo.toml  README.md
src/: constants.rs  main.rs
src/app/: application.rs  application_ui.rs  event_receiver.rs  mod.rs
src/common/: app_event.rs  command_keys.rs  mod.rs
src/components/: chat_area.rs  command.rs  mod.rs  text_editor.rs  text_input.rs  user_registration.rs  userinfo.rs
src/db/: mod.rs  models.rs  operations.rs  tables.rs
src/net/: mod.rs
src/resources/: tables.json
src/styles/: mod.rs
