[package]
name = "oisg"
version = "0.1.0"
edition = "2021"
authors = ["Abhishek Thakur <abhithakur.id@gmail.com>"]
repository = "https://github.com/abhi-thakur/oisg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }